fix bug where invisible links are clickable on mobile

--- a/src/css/mediaQueries.scss
+++ b/src/css/mediaQueries.scss
@@ -50,6 +50,16 @@
 
       .projects{
             grid-template-columns: 1fr;
+
+            figure{
+                  figcaption{
+                        left: -50%;
+                        transition: left 300ms !important;
+                  }
+                  &:hover figcaption{
+                        left: 50%;
+                  }
+            }
       }
 
       .about{
